<?xml version="1.0"?>
<package format="3">
  <name>ros2_lifecycle</name>
  <version>0.0.1</version>
  <description>ROS 2 lifecycle managed sensor node example</description>
  <maintainer email="your.name@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>